--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,51 @@
+[project]
+name = "torchaudio"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.9"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: Implementation :: CPython",
+]
+dependencies = [
+    "kaldi-io>=0.9.8",
+    "pip>=25.0.1",
+    "setuptools>=75.8.2",
+    "soundfile>=0.13.1",
+    "torch>=2.6.0",
+]
+
+[tool.uv.sources]
+torch = [
+    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
+    { index = "torch-cuda", marker = "sys_platform == 'win32'"},
+    { index = "torch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')"},
+]
+
+
+# uv pip install  torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126
+
+[[tool.uv.index]]
+name = "torch-cuda"
+url = "https://download.pytorch.org/whl/cu126"
+explicit = true
+
+[[tool.uv.index]]
+name = "torch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+
+
 [tool.usort]
 
 first_party_detection = false
@@ -10,4 +58,12 @@ target-version = ["py38"]
 [tool.ufmt]
 excludes = [
     "examples/tutorials/",
+]
+
+[dependency-groups]
+dev = [
+    "cmake>=3.31.6",
+    "mypy>=1.15.0",
+    "ninja>=1.11.1.3",
+    "pytest>=8.3.5",
 ]
