--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,7 +143,13 @@ endif()
 if(USE_OPENMP)
   find_package(OpenMP REQUIRED)
 endif()
-find_package(Python3 3.9 COMPONENTS Interpreter Development REQUIRED)
+
+file(READ ".python-version" PYTHON_VERSION)
+string(STRIP "${PYTHON_VERSION}" PYTHON_VERSION)
+find_package(Python3 ${PYTHON_VERSION} COMPONENTS Interpreter Development REQUIRED)
+get_target_property(PYTHON_EXECUTABLE Python3::Interpreter LOCATION)
+message(STATUS "Found Python ${PYTHON_VERSION} at: ${PYTHON_EXECUTABLE}")
+#find_package(Python3 3.9 COMPONENTS Interpreter Development REQUIRED)
 
 # TORCH_CXX_FLAGS contains the same -D_GLIBCXX_USE_CXX11_ABI value as PyTorch
 if (MSVC)
